Add example notes

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
       <md-toolbar>
         <md-button ng-href="#">Home</md-button>
         <md-button ng-href="#/about">About</md-button>
-        <md-button ng-href="#">Contact</md-button>
+        <md-button ng-href="#/notes">Notes</md-button>
         <h1>Sticky notes</h1>
       </md-toolbar>
 
