--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
         <md-button ng-href="#">Home</md-button>
         <md-button ng-href="#/about">About</md-button>
         <md-button ng-href="#/notes">Notes</md-button>
+        <md-button ng-href="#/add">Add</md-button>
         <h1>Sticky notes</h1>
       </md-toolbar>
 
@@ -61,6 +62,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/notes.js"></script>
+        <script src="scripts/controllers/add.js"></script>
         <!-- endbuild -->
 </body>
 </html>
