--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,8 @@
     <!-- Add your site or application content here -->
     <div class="container">
       <md-toolbar>
-        <md-button ng-href="#" aria-label="Home link">Home</md-button>
-        <md-button ng-href="#/about" aria-label="About link">About</md-button>
-        <md-button ng-href="#/notes" aria-label="Note link">Notes</md-button>
+        <md-button ng-href="#/notes" aria-label="Note link">Notes board</md-button>
+        <md-button ng-href="#/list" aria-label="List link">List</md-button>
         <md-button ng-href="#/add" aria-label="Add link">Add</md-button>
         <h1>Sticky notes</h1>
       </md-toolbar>
@@ -61,11 +60,10 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/notes.js"></script>
         <script src="scripts/controllers/add.js"></script>
         <script src="scripts/services/notesstorage.js"></script>
+        <script src="scripts/controllers/list.js"></script>
         <!-- endbuild -->
 </body>
 </html>
