note's drag and drop within a board added

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/hammerjs/hammer.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -61,7 +62,8 @@
         <script src="scripts/controllers/notes.js"></script>
         <script src="scripts/controllers/add.js"></script>
         <script src="scripts/services/notesstorage.js"></script>
-        <script src="scripts/controllers/list.js"></script>
+    <script src="scripts/controllers/list.js"></script>
+    <script src="scripts/directives/drag.js"></script>
         <!-- endbuild -->
 </body>
 </html>
