--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,8 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/notes.js"></script>
-        <script src="scripts/controllers/add.js"></script>
+    <script src="scripts/controllers/add.js"></script>
+    <script src="scripts/controllers/edit.js"></script>
         <script src="scripts/services/notesstorage.js"></script>
     <script src="scripts/controllers/list.js"></script>
     <script src="scripts/directives/drag.js"></script>
