--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/services/notesstorage.js"></script>
     <script src="scripts/controllers/list.js"></script>
     <script src="scripts/directives/drag.js"></script>
+        <script src="scripts/directives/sn-dimensions.js"></script>
         <!-- endbuild -->
 </body>
 </html>
