#12 toast for restoring removed note

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="scripts/controllers/list.js"></script>
     <script src="scripts/directives/drag.js"></script>
         <script src="scripts/directives/sn-dimensions.js"></script>
+        <script src="scripts/controllers/removed-toast.js"></script>
         <!-- endbuild -->
 </body>
 </html>
