#4 rename notes ctrl to board

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <!-- Add your site or application content here -->
     <div class="container">
       <md-toolbar>
-        <md-button ng-href="#/notes" aria-label="Note link">Notes board</md-button>
+        <md-button ng-href="#/board" aria-label="Note link">Notes board</md-button>
         <md-button ng-href="#/list" aria-label="List link">List</md-button>
         <md-button ng-href="#/add" aria-label="Add link">Add</md-button>
         <h1>Sticky notes</h1>
@@ -58,7 +58,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/notes.js"></script>
+        <script src="scripts/controllers/board.js"></script>
     <script src="scripts/controllers/add.js"></script>
     <script src="scripts/controllers/edit.js"></script>
         <script src="scripts/services/notesstorage.js"></script>
