#13 add settings in bottom sheet

--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,9 @@
 
     <!-- Add your site or application content here -->
     <div class="container">
-      <md-toolbar class="md-whiteframe-z1">
+      <md-toolbar class="md-whiteframe-z1" ng-controller="HeaderCtrl">
         <h1>Sticky notes</h1>
+        <md-button class="settings" ng-click="openSettings()" aria-label="Open settings"><md-icon icon="/images/ic_menu_24px.svg">Settings</md-icon></md-button>
         <md-button ng-href="#/board" aria-label="Note link">Notes board</md-button>
         <md-button ng-href="#/list" aria-label="List link">List</md-button>
         <md-button ng-href="#/add" class="md-fab" aria-label="Add link"><md-icon icon="/images/add180.svg">Add</md-icon></md-button>
@@ -61,6 +62,8 @@
     <script src="scripts/directives/drag.js"></script>
     <script src="scripts/directives/sn-dimensions.js"></script>
     <script src="scripts/controllers/removed-toast.js"></script>
+    <script src="scripts/controllers/settings.js"></script>
+    <script src="scripts/controllers/header.js"></script>
     <!-- endbuild -->
   </body>
 </html>
