--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
+    <div class="container" ng-controller="MainCtrl" ng-class="route">
       <md-toolbar class="md-whiteframe-z1" ng-controller="HeaderCtrl">
         <h1>Sticky notes</h1>
         <md-button class="settings" ng-click="openSettings()" aria-label="Open settings"><md-icon icon="./images/ic_menu_24px.svg">Settings</md-icon></md-button>
@@ -64,6 +64,8 @@
     <script src="scripts/controllers/removed-toast.js"></script>
     <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/header.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/services/dimension-delay.js"></script>
     <!-- endbuild -->
   </body>
 </html>
