needs some tests

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,9 @@
     <!-- Add your site or application content here -->
     <div class="container" ng-controller="MainCtrl" ng-class="route">
       <md-toolbar class="md-whiteframe-z1" ng-controller="HeaderCtrl">
-        <h1>Sticky notes</h1>
+        <a ng-href="#/board" class="logo">
+            <h1 ng-href="#/board" >Sticky notes</h1>
+        </a>
         <md-button class="settings" ng-click="openSettings()" aria-label="Open settings"><md-icon icon="./images/ic_menu_24px.svg">Settings</md-icon></md-button>
         <md-button ng-href="#/board" aria-label="Note link">Notes board</md-button>
         <md-button ng-href="#/list" aria-label="List link">List</md-button>
@@ -66,6 +68,7 @@
     <script src="scripts/controllers/header.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/services/dimension-delay.js"></script>
+    <script src="scripts/filters/today.js"></script>
     <!-- endbuild -->
   </body>
 </html>
