--- a/app/index.html
+++ b/app/index.html
@@ -66,9 +66,13 @@
     <script src="scripts/controllers/removed-toast.js"></script>
     <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/header.js"></script>
+    <script src="scripts/controllers/authors.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/services/dimension-delay.js"></script>
     <script src="scripts/filters/today.js"></script>
+    <script src="scripts/filters/yesterday.js"></script>
+    <script src="scripts/filters/lastWeek.js"></script>
+    <script src="scripts/filters/earlier.js"></script>
     <!-- endbuild -->
   </body>
 </html>
