undo archive-all

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
     <script src="scripts/controllers/header.js"></script>
     <script src="scripts/controllers/authors.js"></script>
     <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/archived-all-toast.js"></script>
     <script src="scripts/services/dimension-delay.js"></script>
     <script src="scripts/filters/today.js"></script>
     <script src="scripts/filters/yesterday.js"></script>
