add title attr to buttons

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
         <a ng-href="#/board" class="logo">
             <h1 ng-href="#/board" >Sticky notes</h1>
         </a>
-        <md-button class="settings" ng-click="openSettings()" aria-label="Open settings"><md-icon icon="./images/ic_menu_24px.svg">Settings</md-icon></md-button>
+        <md-button class="settings" ng-click="openSettings()" aria-label="Open settings" title="settings"><md-icon icon="./images/ic_menu_24px.svg">Settings</md-icon></md-button>
         <md-button ng-href="#/board" aria-label="Note link">Notes board</md-button>
         <md-button ng-href="#/list" aria-label="List link">List</md-button>
        </md-toolbar>
