--- a/app/index.html
+++ b/app/index.html
@@ -22,11 +22,11 @@
 
     <!-- Add your site or application content here -->
     <div class="container" ng-controller="MainCtrl" ng-class="route">
-      <md-toolbar class="md-whiteframe-z1" ng-controller="HeaderCtrl">
+      <md-toolbar class="md-whiteframe-z1" ng-controller="HeaderCtrl as header">
         <a ng-href="#/board" class="logo">
           <h1 ng-href="#/board" title="{{- version }}">Sticky notes</h1>
         </a>
-        <md-button class="settings" ng-click="openSettings()" aria-label="Open settings" title="settings">
+        <md-button class="settings" ng-click="header.openSettings()" aria-label="Open settings" title="settings">
           <md-icon md-svg-icon="./images/ic_menu_24px.svg">Settings</md-icon>
         </md-button>
         <md-button ng-href="#/board" aria-label="Note link">Notes board</md-button>
