add moment.js for data comparison
* add moment.js as a dependency
* change data model in notes-storage. Breaking change! all old data should be removed
* rewrite date filter

close 47, 63

--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -71,10 +72,10 @@
     <script src="scripts/services/dimension-delay.js"></script>
     <script src="scripts/filters/today.js"></script>
     <script src="scripts/filters/yesterday.js"></script>
-    <script src="scripts/filters/lastWeek.js"></script>
     <script src="scripts/filters/earlier.js"></script>
     <script src="scripts/services/storage.js"></script>
     <script src="scripts/services/notes-storage.js"></script>
+    <script src="scripts/services/now.js"></script>
     <!-- endbuild -->
   </body>
 </html>
