add prefix to drag directive
close #66

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
     <script src="scripts/controllers/add.js"></script>
     <script src="scripts/controllers/edit.js"></script>
     <script src="scripts/controllers/list.js"></script>
-    <script src="scripts/directives/drag.js"></script>
+    <script src="scripts/directives/sn-drag.js"></script>
     <script src="scripts/directives/sn-dimensions.js"></script>
     <script src="scripts/controllers/removed-toast.js"></script>
     <script src="scripts/controllers/settings.js"></script>
